# build123d-poly

./: example1.stl  pyproject.toml
examples/: example1.py  example1.stl
src/build123d_poly/: __init__.py  drawing_1d.py  line.py  multi.py  poly.py  runtime.py
src/build123d_poly/generator/: boo.py  generate_1d_objects.py  generate_drawing.py  generate_drawing_1d.py  generate_multi.py  polyfuncs_generated.py  pyi.j2  test.py
src/build123d_poly/generator/templates/: generate_1d.j2
tests/: test_codegen.py  test_poly.py
